# cptra_imgtool

./: .gitignore  Cargo.toml  README.md
config/: ast2700-default-ecc-lms-manifest.toml  ast2700-default-ecc-manifest.toml  ast2700-default-manifest.toml  ast2700-irot-ecc-lms-manifest.toml  ast2700-irot-ecc-manifest.toml  ast2700-irot-manifest.toml  ast2700a1-default-ecc-lms-fw-man-sign-helper-byfile-manifest.toml  ast2700a1-default-ecc-lms-fw-man-sign-helper-stdin-manifest.toml  ast2700a1-default-ecc-lms-fw-sign-helper-stdin-manifest.toml  ast2700a1-default-ecc-lms-manifest.toml  ast2700a1-default-ecc-manifest.toml  ast2700a1-default-manifest.toml  ast2700a1-irot-ecc-lms-manifest.toml  ast2700a1-irot-ecc-manifest.toml  ast2700a1-irot-manifest.toml
key/ast2700-default/: own-fw-ecc-prvk.pem  own-fw-ecc-pubk.pem  own-lms-priv-key.pem  own-lms-pub-key.pem  own-priv-key.pem  vnd-fw-ecc-prvk.pem  vnd-fw-ecc-pubk.pem
key/ast2700-irot/: own-fw-ecc-pubk.pem
prebuilt/ast2700a1-default/: vnd_ecc_sig.der
scripts/: dep.sh  ecc_key_gen.sh  genimg.sh  newprj.sh
sign_helper_example/: ecc_sign_helper.py
sign_helper_example/rust_sign_helper/: Cargo.toml
sign_helper_example/rust_sign_helper/src/: main.rs
src/: config.rs  main.rs  soc_man.rs  utility.rs
src/vnd_sig/: vnd_lms_sig.der
